--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -423,7 +423,7 @@
                                         userRow += "</tr>";
                                         var content = headerContent + userRow + "</table>";
                                         document.getElementById("divShowProducts").innerHTML = content;
-                                        alert("Course succesfully added!");
+                                        alert("Product succesfully added!");
                                         document.getElementById("frmProdReg").reset();
                                         count++;
                                     } else {
